frontend/test/typecheck/error/index-nonarray.fc
int foo(int p) {
    return p[0];
}
